--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
   }
